Added a sorting button and fixed the gridworld parameters